frontend-setup/myapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  namespace: frontend
  labels:
    app: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: thirukkumaran/counter-app:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
