frontend-setup/frontend-services.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-lb
  namespace: frontend
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
      app: myapp
