frontend-setup/myapp-services.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-lb
  namespace: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
      app: myapp
